import "libnutrition/proto/data/food_component.proto";

message CompositeFoodData
{
	required int32 id = 1;
	
	optional string name = 2;
	
	optional int32 ownerId = 3;
	
	optional double weightAmount = 4;
	
	optional double volumeAmount = 5;
	
	optional double quantityAmount = 6;
	
	optional double servingAmount = 7;
	
	optional string creationDate_ISO8601 = 8;
	
	optional string expiryDate_ISO8601 = 9;
	
	optional bool isNonce = 10 [default = false];
	
	repeated FoodComponentData components = 11;
}
